# aita

./: .gitignore  README.md  aita.yaml  pyproject.toml
.github/instructions/: copilot-instructions.md
aita/: __main__.py  cli.py  config.py  deterministic_assertions.py  discovery.py  exit_codes.py  hooks.py  http_client.py  llm_asserter.py  models.py  report.py
tests/: test_chat_contract_integration.py  test_cli.py  test_config.py  test_deterministic_assertions.py  test_discovery.py  test_hooks.py  test_http_client.py  test_llm_asserter.py  test_runner_semantics.py
